<resources>
    <string name="app_name">Maze</string>
    <string name="action_settings">Settings</string>
    <!-- fragments for navigation -->
    <string name="first_fragment_label">Sign In Page</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="park_near">Find Parking Near Me</string>

    <string name="maze">Maze</string>
    <string name="vehicle_make_model">Vehicle Make/Model</string>
    <string name="vehicle_number">Vehicle Registration Number</string>
    <string name="make_model">Make/Model</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails</string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!-- required for notification   -->
    <string name="notification_channel_id">throughmaze</string>
    <string name="notification_channel_name">violation_alert_</string>
    <string name="notification_channel_description">This channel is created for notifying the user
        for parking their vehicle in a restricted area_</string>

    <!-- Sign Up String -->
    <string name="Submit">Submit</string>

    <!-- Setting -->
    <string name="ViolationInfo"> Violation Info</string>
    <string name="Violation"> Report Violation</string>
    <string name="Availablity"> Report Availability</string>
    <string name="UserProfile"> User Profile</string>
    <string name="Help"> Help</string>

    <!-- Settings Violation Info -->
    <string name="Info_on_violation">Parking Violation Information</string>
    <string name="violation_location">Current Location:</string>
    <string name="violation_address">*373 Front Street East, Toronto, ON M5A 1G4*</string>
    <string name="type_of_violation">Type of Violation:</string>
    <string name="_violation">This area is a high ticket zone. \nThere has been 12 violation reports made in the last 3 days.</string>
    <string name="violation_type">Restricted area, vehicle is parked on municipal property. \n A compulsory fine of $30+ will be issued if vehicle stays parked in the current location. </string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>

    <!-- Report Violation Strings -->
    <string name="parking_address">Parking Address</string>
    <string name="time_of_violation">Time:</string>
    <string name="violation_type_report">Type of Violation</string>
    <string name="cost_of_violation">Ticket Cost:</string>

    <!-- API Key -->
    <string name="api_key">Insert Personal Key Here</string>
</resources>