<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:weightSum="2"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_height="match_parent"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:orientation="vertical">

            <Space
                android:layout_width="match_parent"
                android:layout_height="20dp" />

            <TextView
                android:id="@+id/textView"
                android:layout_width="500dp"
                android:layout_height="50dp"
                android:paddingLeft="48dp"
                android:gravity="center_vertical"
                android:text="Past Parking Locations"
                android:textColor="@color/white"
                android:textSize="30sp"
                app:drawableTint="@color/black"
                app:textAllCaps="false" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recycler_view_report_violation"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager">

            </androidx.recyclerview.widget.RecyclerView>

        </LinearLayout>

        <ScrollView
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:layout_width="411dp">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:id="@+id/icon_parking_address"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    app:layout_constraintBottom_toBottomOf="@id/text_parking_address"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="@id/text_parking_address"
                    app:layout_constraintVertical_bias="1.0"
                    app:srcCompat="@drawable/violation_location" />

                <TextView
                    android:id="@+id/text_parking_address"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="60dp"
                    android:layout_marginTop="20dp"
                    android:text="@string/parking_address"
                    android:textColor="@color/smokey_white"
                    android:textSize="28sp"
                    app:layout_constraintStart_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/parking_address_textInput_layout"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="50dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="50dp"
                    app:boxStrokeColor="@color/blue_dark"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="1.0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/text_parking_address"
                    app:layout_constraintVertical_bias="0.012">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/parking_address_model_editText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="text"
                        android:textColor="@color/white"
                        android:textSize="24sp" />
                </com.google.android.material.textfield.TextInputLayout>

                <ImageView
                    android:id="@+id/icon_time_of_violation"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    app:layout_constraintBottom_toBottomOf="@id/text_time_of_violation"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="@id/text_time_of_violation"
                    app:layout_constraintVertical_bias="1.0"
                    app:srcCompat="@drawable/time_of_violation" />

                <TextView
                    android:id="@+id/text_time_of_violation"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="60dp"
                    android:text="@string/time_of_violation"
                    android:textColor="@color/smokey_white"
                    android:textSize="28sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="1.0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/parking_address_textInput_layout"
                    app:layout_constraintVertical_bias="0.058" />

                <ImageView
                    android:id="@+id/icon_cost_of_violation"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="510dp"
                    app:layout_constraintBottom_toBottomOf="@id/text_cost_of_violation"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="@id/text_cost_of_violation"
                    app:layout_constraintVertical_bias="1.0"
                    app:srcCompat="@drawable/cost_of_violation" />

                <TextView
                    android:id="@+id/text_cost_of_violation"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="550dp"
                    android:text="@string/cost_of_violation"
                    android:textColor="@color/smokey_white"
                    android:textSize="28sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="1.0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/parking_address_textInput_layout"
                    app:layout_constraintVertical_bias="0.058" />

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/time_of_violation_textInput_layout"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="60dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="400dp"
                    app:boxStrokeColor="@color/blue_dark"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="1.0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/text_time_of_violation"
                    app:layout_constraintVertical_bias="0.023">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/time_of_violation_editText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="time"
                        android:textColor="@color/white"
                        android:textSize="24sp" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/cost_of_violation_textInput_layout"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="550dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="50dp"
                    app:boxStrokeColor="@color/blue_dark"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="1.0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/text_time_of_violation"
                    app:layout_constraintVertical_bias="0.023">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/cost_of_violation_editText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="time"
                        android:textColor="@color/white"
                        android:textSize="24sp" />
                </com.google.android.material.textfield.TextInputLayout>

                <ImageView
                    android:id="@+id/icon_violation_type"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    app:layout_constraintBottom_toBottomOf="@id/text_violation_type"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="@id/text_violation_type"
                    app:layout_constraintVertical_bias="0.0"
                    app:srcCompat="@drawable/report_type_of_violation" />

                <TextView
                    android:id="@+id/text_violation_type"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="55dp"
                    android:text="@string/violation_type_report"
                    android:textColor="@color/smokey_white"
                    android:textSize="28sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/time_of_violation_textInput_layout"
                    app:layout_constraintVertical_bias="0.055" />

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/violation_type_textInput_layout"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="60dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="50dp"
                    app:boxStrokeColor="@color/blue_dark"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="1.0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/text_violation_type"
                    app:layout_constraintVertical_bias="0.023">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/violation_type_editText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="text"
                        android:textColor="@color/white"
                        android:textSize="24sp" />
                </com.google.android.material.textfield.TextInputLayout>

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/submitButton3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@color/blue_dark"
                    android:padding="20dp"
                    android:layout_marginTop="50dp"
                    android:text="submit"
                    android:textColor="#a8aeb9"
                    android:textSize="20sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/violation_type_textInput_layout" />
            </androidx.constraintlayout.widget.ConstraintLayout>
        </ScrollView>
    </LinearLayout>
</FrameLayout>